declarative/processor/src/test/resources/good/resource unannotated method is default.java
package x;

import com.inrupt.rdf.wrapping.declarative.annotation.Resource;

@Resource
interface X {
    default Object x() {
        return null;
    }
}
